# ChangeLog for sci-mathematics/octave
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.86 2010/03/11 15:30:03 bicatali Exp $

  11 Mar 2010; Sébastien Fabbro <bicatali@gentoo.org>
  octave-3.2.4-r1.ebuild:
  Now added graphicsmagick since it is keyworded in all arches

*octave-3.2.4-r1 (06 Mar 2010)

  06 Mar 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +octave-3.2.4-r1.ebuild, +files/octave-3.2.4-imread.patch,
  +files/octave-3.2.4-ldflags.patch:
  Added a possibility to view results of tests (bug #303537), fixed imread
  (bug #307693), removed hdf5 (bug #299876), and now respect LDFLAGS

  17 Feb 2010; Sébastien Fabbro <bicatali@gentoo.org> octave-3.2.4.ebuild:
  Modified fltk automagic to no instead of empty string

  12 Feb 2010; Markus Dittrich <markusle@gentoo.org> octave-3.2.4.ebuild:
  If hdf5 is compiled against MPI we need to use the mpi wrappers to compile 
  octave to avoid linker errors (#302621, #303391).

  03 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  octave-3.2.3-r1.ebuild:
  stable x86, bug 302512

*octave-3.2.4 (01 Feb 2010)

  01 Feb 2010; Sébastien Fabbro <bicatali@gentoo.org> -octave-3.2.0.ebuild,
  -octave-3.2.3.ebuild, +octave-3.2.4.ebuild:
  Version bump. Pulled the science overlay version which included opengl and
  fltk goodness. The automagic dependency on graphicsmagick still not depend
  because of missing arches and imread is buggy with graphicsmagick-1.3.8.

*octave-3.2.3-r1 (12 Jan 2010)

  12 Jan 2010; Markus Dittrich <markusle@gentoo.org>
  +octave-3.2.3-r1.ebuild:
  New revision pulls in sci-libs/qrupdate so everybody gets fast QR & Cholesky
  updating functions.

*octave-3.2.3 (04 Nov 2009)

  04 Nov 2009; Markus Dittrich <markusle@gentoo.org> +octave-3.2.3.ebuild:
  Version bump (fixes #291560).

  04 Nov 2009; Markus Dittrich <markusle@gentoo.org> octave-3.2.0.ebuild: