@@ -13,7 +13,6 @@ DIST octave-3.2.3.tar.bz2 12085781 RMD160 30c1892544ba67054f1888758ebc2b1ede8848
 DIST octave-3.2.4.tar.bz2 12080959 RMD160 6dcdea7ef2431b8427da5e6b9d2113e0e5736f43 SHA1 7de078564027108f3436f3ba7bf5993a6b411a67 SHA256 48471d05c7ed9c0a5a4d5fa4ae8a857447ac3da1197f86cfe79b9d8f4fdfd147
 EBUILD octave-3.0.3.ebuild 2691 RMD160 809e222a0ef9dba234045d0984a3bb81a3af2ad1 SHA1 04b95885f9ac3f610f17f449c0d20bf89b938b81 SHA256 4026a63a456bb8dfb862387f551b55257bb0e3e37620956acf959c4058192233
 EBUILD octave-3.2.3-r1.ebuild 2557 RMD160 438bac215ff2605075bf5052a43de5bcef0bc20b SHA1 7672f58ea219f69c080e0907319663d23dadcd85 SHA256 fb5e25aa11f55093f1da7b68bbecb2fcc6422f51ba937bb53fb1df51379249af
-EBUILD octave-3.2.4-r1.ebuild 2930 RMD160 24b848a727f67cf3cc30dcea88e39b3e8f55d190 SHA1 16a20f57c1ec35bdf5aabc6fa32f199b6548c1a7 SHA256 fdab01abf1852003454db289d8b55f6a5abea26a50d9b178509a93a9edaf1f09
-EBUILD octave-3.2.4.ebuild 2950 RMD160 199ea7bee083db55845a721c7526c3f7b8c8a358 SHA1 52cf5156a8a1a8f7366a6823abb3a1fa6b779276 SHA256 62290112a54d327b2be6690c5be4b8ecf9b1afa182c8dc4692b2839c688a2cd3
-MISC ChangeLog 22319 RMD160 69a42870c8c973d8db7718c59083e4daddfe3568 SHA1 acbecacf7d534f7608a885853597eb6361b9d5ad SHA256 21ffa4c7dafb59c1c493310898d8960dc599b56a96f3acdb31382f54faa61629
+EBUILD octave-3.2.4-r1.ebuild 2988 RMD160 54c2a65a1443f7034b59060bdb7af6f51a94bb98 SHA1 7067a013d5bda7ea894eb3effaff8fc887e098e1 SHA256 fe2a2def3f3f23535245d0a6d66756e5177ca44d84d6d0e1dc5fadd2ef361d23
+MISC ChangeLog 22690 RMD160 7452c6891fd2638eef4f0118cbc806f3cdfcb768 SHA1 bdf8e2a41800d1f0ca583b87ae561c9152cca335 SHA256 483e6922b3c7bcb2a30bc2f203b4dfec3493b85df2691802eb052d4caf7c6b76
 MISC metadata.xml 260 RMD160 27a4292b758e1199d0092b731cba79033f1b4167 SHA1 9997a99a4d6115f3b901208ba711d735ce9be36e SHA256 5fda55fd44bfec5755e1c3ac828887c37f0eebed6b3b972454e123ac2472d3ff
